# rag_poc

./: .dockerignore  .env.example  .env.graphrag  .env.graphrag.example  .gitignore  .llm.env  CLAUDE.md  Dockerfile  README.md  docker-compose.graphrag.yml  docker-compose.yml  pyproject.toml  test_sources_stream.py
config/: litellm_config.yaml
docs/: AGENTIC_RAG_FLOW.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  CONFIGURATION.md  DEPLOYMENT.md  GETTING_STARTED.md  GRAPHRAG_DOCKER_GUIDE.md  HIGH_CONCURRENCY_OPTIMIZATION.md  LANGFUSE_INTEGRATION.md  README.md  SCRIPTS_DOCUMENT_HANDOUT_PIPELINE.md  SECURITY.md  SSE_STREAMING.md  TESTING.md  chatbot_graphrag_architecture.md
frontend/chat-widget/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/chat-widget/loader/: package.json  rollup.config.js
frontend/chat-widget/public/: demo.html  widget.js
frontend/chat-widget/src/: App.svelte  app.css
frontend/chatbot-ui/: Dockerfile  README.md  angular.json  nginx.app-prod-2.conf  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/chatbot-ui/src/: styles.css
rag_test_data/cus/: 就醫流程.md
rag_test_data/cus/衛教/: 1701571983_300.md  1701572052_383.md  1701572078_932.md  1701572138_687.md  1701574181_997.md  1701576029_873.md  1701576047_102.md  1701576086_599.md  1701576101_598.md  (+179 more)
rag_test_data/source/: PtchAiRag.txt  屏基官網AI客服即時資訊RAG.txt  會定時自動去抓取網頁更新的RAG內容.txt  衛教單.txt  門診時刻表RAG.txt
rag_test_data/test/: 醫院院長的問候.md
rag_test_data/範本/: education.handout.md  guide.generic.md  guide.location.md  guide.transport.md  procedure.application.md  profile.physician.md  profile.team.md
scripts/: analyze_regression_report.py  check_nebula_data.py  check_nebula_physician.py  check_nebula_simple.py  download_floor_guide_images.py  format_health_education_files.py  generate_synthetic_eval_set.py  init-db.sql  init-postgres.sh  nebula_schema_ngql.py  parse_education_handouts.py  pdf_structured_extract.py  run_regression_eval.py  test_graph_pipeline.py  test_query_decomposition.py  update_education_handout_metadata_bulk.py  update_education_handout_summary_bulk.py
src/chatbot_graphrag/: __init__.py  alembic.ini  cli.py  main.py
src/chatbot_rag/: __main__.py  cli.py  main.py
tests/: README.md  conftest.py  test_api.py  test_input_guard.py  test_language_detection_graphrag.py  test_multilingual_attacks.py  test_no_documents_found.py  test_security_attacks.py
tests/fixtures/: README.md  attack_test_cases.json
(+849 files in other folders)
