[project]
name = "chatbot-rag"
version = "0.1.0"
description = "A RAG-based chatbot using FastAPI"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "langgraph>=1.0.3",
    "langchain>=1.0.7",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.15.1",
    "openai>=2.8.0",
    "python-multipart>=0.0.20",
    "langchain-text-splitters>=1.0.0",
    "langchain-openai>=1.0.3",
    "sse-starlette>=3.0.3",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
    "langfuse>=3.10.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.7.8",
    "sentence-transformers>=5.2.0",
    "nebula3-python>=3.8.3",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "minio>=7.2.0",
    "opensearch-py>=3.0.0",
    "redis>=5.0.0",
    "networkx>=3.2.0",
    "leidenalg>=0.10.0",
    "python-igraph>=0.11.0",
    "alembic>=1.13.0",
]

[project.scripts]
chatbot-dev = "chatbot_rag.cli:dev"
chatbot-start = "chatbot_rag.cli:start"
chatbot-prod = "chatbot_rag.cli:prod"
graphrag-dev = "chatbot_graphrag.cli:run_dev"
graphrag-prod = "chatbot_graphrag.cli:run_prod"
graphrag = "chatbot_graphrag.cli:main"
graphrag-db = "chatbot_graphrag.db.migrations:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

# PDF → Markdown 結構化抽取（見 scripts/pdf_structured_extract.py）
pdf = [
    "pymupdf>=1.26.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_rag", "src/chatbot_graphrag"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "security: security and input validation tests",
    "injection: prompt injection tests",
    "jailbreak: jailbreak attempt tests",
    "leak: system information leakage tests",
    "delimiter: delimiter manipulation tests",
    "legitimate: legitimate question tests",
    "comprehensive: comprehensive test suites using attack_test_cases.json",
    "slow: slow-running tests (mark with @pytest.mark.slow)",
]
